# GUARDIAN-AI

./: .gitignore  CREDENTIALS_STATUS.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_STATUS.md  LICENSE  PROJECT.md  README.md  SYSTEM_OVERVIEW.md  USER_GUIDE.md  cloudbuild.yaml  deploy.ps1  deploy.sh  pyproject.toml  pyproject.toml.disabled
backend/: .env.example  .env.render  Dockerfile  RENDER_ENV_SETUP.md  __init__.py  config.py  main.py  models.py  render.yaml  requirements.txt  test_demo_api.py
backend/api/: __init__.py  demo.py  health.py  incidents.py  metrics.py  (+1 more)
demo-app/: .env.example  README.md  SETUP.md  app.py  requirements.txt
docs/: DEPLOYMENT.md  FIRESTORE_MODE_FIX.md  PHASE2_TASK4_STATUS.md  PHASE2_TASK5_STATUS.md  PHASE2_TASK6_STATUS.md  PHASE3_DATADOG_STATUS.md  architecture.md
frontend/: README.md  index.html  package-lock.json  package.json  render.yaml  tailwind.config.js  vite.config.ts
pipeline/: CONFIG_GUIDE.md  DATADOG_MONITORS_GUIDE.md  DATADOG_PERMISSIONS_FIX.md  __init__.py  alert_manager.py  anomaly_detector.py  check_apis.py  check_gemini_models.py  config.py  datadog_monitors.py  enable_apis.py  enable_apis_gcloud.py  gemini_analyzer.py  gemini_analyzer_aistudio.py  import_all_monitors.py  main.py  pyproject.toml  quality_analyzer.py  requirements-function.txt  requirements.txt  setup_monitors.py  telemetry_processor.py  test_ai_studio_api.py  test_anomaly_detector.py  test_firestore.py  test_gemini.ps1  threat_detector.py
pipeline/datadog_monitors/: README.md
sdk/: README.md  setup.py
tests/: __init__.py  requirements.txt
(+56 files in other folders)
