[project]
name = "guardianai-pipeline"
version = "0.1.0"
description = "GuardianAI Processing Pipeline - Cloud Functions"
requires-python = ">=3.11"

dependencies = [
    "datadog-api-client>=2.0.0",
    "google-cloud-firestore>=2.13.0",
    "functions-framework>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.0.0",
]
